--- a/canvasapp/Src/Chat.fx.yaml
+++ b/canvasapp/Src/Chat.fx.yaml
@@ -203,6 +203,7 @@
                         LayoutMinHeight: =100
                         LayoutMinWidth: =100
                         LoadingSpinner: =LoadingSpinner.Data
+                        OnSelect: =Set(varSearchSelectPrompt,  ThisItem.Prompt);
                         TemplateSize: =Min(870, Self.Height - 60)
                         Transition: =Transition.Pop
                         Visible: =!IsBlank(SearchTextInput1.Text)
@@ -213,6 +214,7 @@
                             AutoHeight: =true
                             Color: =RGBA(0, 0, 0, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
+                            Fill: =RGBA(251, 251, 251, 1)
                             Height: =36
                             HoverColor: =Color.DarkBlue
                             OnSelect: =Select(Parent)
@@ -220,8 +222,9 @@
                             PaddingLeft: =0
                             PaddingRight: =0
                             PaddingTop: =0
-                            Size: =8
+                            Size: =10
                             Text: =ThisItem.Prompt
+                            Tooltip: =ThisItem.Prompt
                             Width: =Parent.Width-Icon1.Width - 15
                             Wrap: =false
                             Y: =
@@ -253,7 +256,7 @@
                         HoverBorderColor: =RGBA(89, 0, 0, 1)
                         HoverColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(222, 179, 184, 1)
-                        Size: =8
+                        Size: =10
                         Width: =Parent.Width
                         ZIndex: =3
 
@@ -391,7 +394,7 @@
                 BorderThickness: =2
                 Clear: =true
                 Color: =RGBA(0, 0, 0, 1)
-                Default: =""
+                Default: =If(!IsBlankOrError(varSearchSelectPrompt), varSearchSelectPrompt, "")
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
