--- a/canvasapp/Src/Chat.fx.yaml
+++ b/canvasapp/Src/Chat.fx.yaml
@@ -159,15 +159,14 @@
                     "TabListNav As 'Tab list'.pcfdataset":
                         AlignInContainer: =AlignInContainer.Stretch
                         Alignment: ='PowerApps.CoreControls.TabList.Alignment'.Vertical
-                        DefaultSelectedItems: |-
-                            =[{ name: "Current Session"}]
+                        DefaultSelectedItems: =varTablistDefault
                         DisplayMode: =DisplayMode.Edit
                         FillPortions: =1
                         Height: =45
-                        Items: |-
-                            =[{ name: "Current Session"}, {name: "History"}, {name: "Favorites"}]
+                        Items: =colTabs
                         LayoutMinHeight: =30
                         LayoutMinWidth: =100
+                        OnSelect: =false
                         RenderSize: ='PowerApps.CoreControls.TabList.RenderSize'.Large
                         Width: =Parent.Width
                         X: =0
@@ -252,7 +251,7 @@
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         DisabledFill: =RGBA(244, 244, 244, 1)
                         FocusedBorderThickness: =4
-                        HintText: ="Search Prompt"
+                        HintText: ="Search Prompts"
                         HoverBorderColor: =RGBA(89, 0, 0, 1)
                         HoverColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(222, 179, 184, 1)
@@ -267,25 +266,46 @@
                     Fill: =RGBA(255, 255, 255, 1)
                     FillPortions: =8
                     Items: |-
-                        =If(
-                            IsBlankOrError(clearTime),
+                        =Switch(
+                            TabListNav.Selected.name,
+                            "History",
                             Sort(
                                 Filter(
                                     mgpt_reponses,
-                                    'Created On' >= Today(),
                                     User = User().Email
                                 ),
                                 'Created On',
                                 SortOrder.Descending
                             ),
+                            "Favorites",
                             Sort(
                                 Filter(
                                     mgpt_reponses,
-                                    'Created On' >= clearTime,
                                     User = User().Email
                                 ),
                                 'Created On',
                                 SortOrder.Descending
+                            ),
+                            If(
+                                IsBlankOrError(clearTime),
+                                Sort(
+                                    Filter(
+                                        mgpt_reponses,
+                                        'Created On' >= Today(),
+                                        User = User().Email
+                                    ),
+                                    'Created On',
+                                    SortOrder.Descending
+                                ),
+                                Sort(
+                                    Filter(
+                                        mgpt_reponses,
+                                        'Created On' >= clearTime,
+                                        User = User().Email
+                                    ),
+                                    'Created On',
+                                    SortOrder.Descending
+                                )
                             )
                         )
                     Layout: =Layout.Vertical
